[package]
name = "standback"
version = "0.2.17"
authors = ["Jacob Pratt <open-source@jhpratt.dev>", "The Rust Project Developers"]
edition = "2018"
repository = "https://github.com/jhpratt/standback"
keywords = ["std", "back-compatible", "polyfill"]
categories = ["no-std"]
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "New standard library, old compiler."
build = "build.rs"
include = ["src/**/*", "LICENSE-*", "README.md", "CHANGELOG.md", "build.rs"]

[features]
default = ["std"]
std = []

[build-dependencies]
version_check = "0.9.2"
