[package]
name = "standback"
version = "0.3.0"
authors = ["Jacob Pratt <open-source@jhpratt.dev>", "The Rust Project Developers"]
edition = "2018"
repository = "https://github.com/jhpratt/standback"
keywords = ["std", "back-compatible", "polyfill"]
categories = ["no-std", "rust-patterns"]
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "New standard library, old compiler."
build = "build.rs"
include = ["src/**/*", "LICENSE-*", "README.md", "CHANGELOG.md", "build.rs"]

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["std", "msrv-1-36"]
std = ["alloc"]
alloc = []

msrv-1-36 = ["msrv-1-37"]
msrv-1-37 = ["msrv-1-38"]
msrv-1-38 = ["msrv-1-39"]
msrv-1-39 = ["msrv-1-40"]
msrv-1-40 = ["msrv-1-41"]
msrv-1-41 = ["msrv-1-42"]
msrv-1-42 = ["msrv-1-43"]
msrv-1-43 = ["msrv-1-44"]
msrv-1-44 = ["msrv-1-45"]
msrv-1-45 = ["msrv-1-46"]
msrv-1-46 = ["msrv-1-47"]
msrv-1-47 = ["msrv-1-48"]
msrv-1-48 = ["msrv-1-49"]
msrv-1-49 = ["msrv-1-50"]
msrv-1-50 = ["msrv-1-51"]
msrv-1-51 = []

[build-dependencies]
version_check = "0.9.2"
